[Themes] Fix missing colors

--- a/app/javascript/src/styles/themes/_theme_bloodlust.scss
+++ b/app/javascript/src/styles/themes/_theme_bloodlust.scss
@@ -21,6 +21,7 @@ body {
   // Main Colors
   --color-text:                   #ffffff;
   --color-text-muted:             #{$bloodlust-color-text-muted};
+  --color-text-white:             #ffffff;
   --color-text-table-header:      #{darken(#ffffff, 10%)};
 
   --color-link:                   #{$bloodlust-color-link};
@@ -30,10 +31,26 @@ body {
 
   --color-link-last-page:         #{$bloodlust-color-text-muted};
 
+  --color-success:                darkgreen;
+  --color-success-darken-5:       #{darken(darkgreen, 5%)};
+  --color-danger:                 maroon;
+  --color-danger-darken-5:        #{darken(maroon, 5%)};
+  --color-danger-darken-10:       #{darken(maroon, 10%)};
+  --color-warning:                sienna;
+  --color-warning-darken-5:       #{darken(sienna, 5%)};
+
+  --color-rating-explicit:        #e45f5f;
+  --color-rating-questionable:    hsl(50, 100%, 70%);
+  --color-rating-safe:            #3e9e49;
+
+  --color-score-positive:         #3e9e49;
+  --color-score-negative:         #e45f5f;
+
   --color-active-tag:             #{$bloodlust-color-foreground};
 
   // DText Colors
   --color-dtext-quote:            #67717b;
+  --color-dtext-code:             #ffe380;
   --color-dtext-section:          #427982;
 
   // User Groups
@@ -45,9 +62,49 @@ body {
   --color-user-blocked:           #ffee95;
   --color-user-blocked-alt:       #f68b00;
 
+  --color-user-former-staff:      #78dca5;
+  --color-user-former-staff-alt:  #4da073;
+  --color-user-janitor:           #d82828;
+  --color-user-janitor-alt:       #cc5151;
+  --color-user-moderator:         #d82828;
+  --color-user-moderator-alt:     #cc5151;
+  --color-user-admin:             #e69500;
+  --color-user-admin-alt:         #9d6703;
+
   // Tag Categories
   --color-tag-general:            #ffee95;
   --color-tag-general-alt:        #f68b00;
+
+  // compatibility
+  --color-tag-artist:             #f2ac08;
+  --color-tag-artist-alt:         #fbd67f;
+
+  --color-tag-director:           #f2ac08;
+  --color-tag-director-alt:       #fbd67f;
+
+  --color-tag-contributor:        #c0c0c0;
+  --color-tag-contributor-alt:    #71706e;
+
+  --color-tag-franchise:          #d0d;
+  --color-tag-franchise-alt:      #ff5eff;
+
+  --color-tag-character:          #0a0;
+  --color-tag-character-alt:      #2bff2b;
+
+  --color-tag-species:            #ed5d1f;
+  --color-tag-species-alt:        #f6b295;
+
+  --color-tag-invalid:            #ff3d3d;
+  --color-tag-invalid-alt:        #{lighten(#ff3d3d, 25%)};
+
+  --color-tag-meta:               #fff;
+  --color-tag-meta-alt:           #666;
+
+  --color-tag-lore:               #282;
+  --color-tag-lore-alt:           #5fdb5f;
+
+  --color-tag-pool:               wheat;
+  --color-tag-pool-alt:           #d0b27a;
 
   // Spoilers
   --color-spoiler-link:           #{$bloodlust-color-link};
